{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 130,
  "lineage": "da80da70-6eac-7368-9275-596b1afdc8ee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_front_https_tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:871234562129:targetgroup/alb-front-https/9ce3904df9e14d21",
            "arn_suffix": "targetgroup/alb-front-https/9ce3904df9e14d21",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200-308",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 4,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:871234562129:targetgroup/alb-front-https/9ce3904df9e14d21",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-front-https",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0423a2345e3d1e106"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "alb_backend-01_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:871234562129:targetgroup/alb-front-https/9ce3904df9e14d21-20200706174123764900000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:871234562129:targetgroup/alb-front-https/9ce3904df9e14d21",
            "target_id": "i-0e3a87761a01a50ff"
          },
          "dependencies": [
            "aws_alb_target_group.alb_front_https_tg",
            "aws_iam_instance_profile.ec2-role",
            "aws_instance.ec2-user",
            "aws_key_pair.default",
            "aws_security_group.sgweb",
            "aws_subnet.public-subnet1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "alb_backend-02_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:871234562129:targetgroup/alb-front-https/9ce3904df9e14d21-20200706174739678700000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:871234562129:targetgroup/alb-front-https/9ce3904df9e14d21",
            "target_id": "i-0ab782cff8852d374"
          },
          "dependencies": [
            "aws_alb_target_group.alb_front_https_tg",
            "aws_iam_instance_profile.ec2-role",
            "aws_instance.ec2-user2",
            "aws_key_pair.default",
            "aws_security_group.sgweb",
            "aws_subnet.public-subnet2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d95fab7fff3776c",
            "arn": "arn:aws:ec2:us-east-1:871234562129:instance/i-006c78ec19d04bf0c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-006c78ec19d04bf0c",
            "instance_state": "running",
            "instance_type": "t1.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bbaa545b4d15fc08",
            "private_dns": "ip-10-0-2-233.ec2.internal",
            "private_ip": "10.0.2.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0167e9fd43604292d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-009b461433fc424c2",
            "tags": {
              "Name": "database"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0063506d841871142"
            ]
          },
          "dependencies": [
            "aws_key_pair.default",
            "aws_security_group.sgdb",
            "aws_subnet.private-subnet",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-user",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d95fab7fff3776c",
            "arn": "arn:aws:ec2:us-east-1:871234562129:instance/i-0e3a87761a01a50ff",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-role",
            "id": "i-0e3a87761a01a50ff",
            "instance_state": "running",
            "instance_type": "t1.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05b324e51ab1d2d7a",
            "private_dns": "ip-10-0-1-155.ec2.internal",
            "private_ip": "10.0.1.155",
            "public_dns": "ec2-54-166-147-149.compute-1.amazonaws.com",
            "public_ip": "54.166.147.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0317457fd6e4d15d9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0b430b548d9c36546",
            "tags": {
              "Name": "ec2-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c3b1c777fa059af8"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-role",
            "aws_key_pair.default",
            "aws_security_group.sgweb",
            "aws_subnet.public-subnet1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-user2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d95fab7fff3776c",
            "arn": "arn:aws:ec2:us-east-1:871234562129:instance/i-0ab782cff8852d374",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-role",
            "id": "i-0ab782cff8852d374",
            "instance_state": "running",
            "instance_type": "t1.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08531a8fd4036b86c",
            "private_dns": "ip-10-0-3-98.ec2.internal",
            "private_ip": "10.0.3.98",
            "public_dns": "ec2-3-236-128-209.compute-1.amazonaws.com",
            "public_ip": "3.236.128.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-030af835c010b6556",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0f2f5c3b29ae57bff",
            "tags": {
              "Name": "ec2-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c3b1c777fa059af8"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-role",
            "aws_key_pair.default",
            "aws_security_group.sgweb",
            "aws_subnet.public-subnet2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d95fab7fff3776c",
            "arn": "arn:aws:ec2:us-east-1:871234562129:instance/i-08b5c22a9a68202c7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvdh",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09f792167789247d9",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-role",
            "id": "i-08b5c22a9a68202c7",
            "instance_state": "running",
            "instance_type": "t1.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f9ec53f83ad1e72a",
            "private_dns": "ip-10-0-1-202.ec2.internal",
            "private_ip": "10.0.1.202",
            "public_dns": "ec2-34-238-158-255.compute-1.amazonaws.com",
            "public_ip": "34.238.158.255",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b8a17e290d6867c1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0b430b548d9c36546",
            "tags": {
              "Name": "webserver"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "Extra volume data"
            },
            "vpc_security_group_ids": [
              "sg-0c3b1c777fa059af8"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-role",
            "aws_key_pair.default",
            "aws_security_group.sgweb",
            "aws_subnet.public-subnet1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871234562129:internet-gateway/igw-04e8e6283860192cb",
            "id": "igw-04e8e6283860192cb",
            "owner_id": "871234562129",
            "tags": {
              "Name": "VPC IGW"
            },
            "vpc_id": "vpc-0423a2345e3d1e106"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:871234562129:loadbalancer/app/test-lb-tf/cebf57b24b99d457",
            "arn_suffix": "app/test-lb-tf/cebf57b24b99d457",
            "dns_name": "test-lb-tf-1927267808.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:871234562129:loadbalancer/app/test-lb-tf/cebf57b24b99d457",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-0c3b1c777fa059af8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b430b548d9c36546"
              },
              {
                "subnet_id": "subnet-0f2f5c3b29ae57bff"
              }
            ],
            "subnets": [
              "subnet-0b430b548d9c36546",
              "subnet-0f2f5c3b29ae57bff"
            ],
            "tags": {
              "Environment": "Production"
            },
            "vpc_id": "vpc-0423a2345e3d1e106",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sgweb",
            "aws_subnet.public-subnet1",
            "aws_subnet.public-subnet2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:871234562129:listener/app/test-lb-tf/cebf57b24b99d457/c4f3eb2294f430bc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:871234562129:targetgroup/alb-front-https/9ce3904df9e14d21",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:871234562129:listener/app/test-lb-tf/cebf57b24b99d457/c4f3eb2294f430bc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:871234562129:loadbalancer/app/test-lb-tf/cebf57b24b99d457",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb_target_group.alb_front_https_tg",
            "aws_lb.front_end",
            "aws_security_group.sgweb",
            "aws_subnet.public-subnet1",
            "aws_subnet.public-subnet2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c4a0c94d7b478f06",
            "owner_id": "871234562129",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04e8e6283860192cb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet RT"
            },
            "vpc_id": "vpc-0423a2345e3d1e106"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ec4941fda9cb37a",
            "route_table_id": "rtb-0c4a0c94d7b478f06",
            "subnet_id": "subnet-0b430b548d9c36546"
          },
          "dependencies": [
            "aws_route_table.web-public-rt",
            "aws_subnet.public-subnet1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067173ec277db131e",
            "route_table_id": "rtb-0c4a0c94d7b478f06",
            "subnet_id": "subnet-0f2f5c3b29ae57bff"
          },
          "dependencies": [
            "aws_route_table.web-public-rt",
            "aws_subnet.public-subnet2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgdb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871234562129:security-group/sg-0063506d841871142",
            "description": "Allow traffic from public subnet",
            "egress": [],
            "id": "sg-0063506d841871142",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sg_test_web",
            "name_prefix": null,
            "owner_id": "871234562129",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0423a2345e3d1e106"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgweb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871234562129:security-group/sg-0c3b1c777fa059af8",
            "description": "Allow incoming HTTP connections \u0026 SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3b1c777fa059af8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_test_web",
            "name_prefix": null,
            "owner_id": "871234562129",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0423a2345e3d1e106"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871234562129:subnet/subnet-009b461433fc424c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-009b461433fc424c2",
            "map_public_ip_on_launch": false,
            "owner_id": "871234562129",
            "tags": {
              "Name": "Database Private Subnet"
            },
            "vpc_id": "vpc-0423a2345e3d1e106"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871234562129:subnet/subnet-0b430b548d9c36546",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b430b548d9c36546",
            "map_public_ip_on_launch": false,
            "owner_id": "871234562129",
            "tags": {
              "Name": "Public Subnet - 1"
            },
            "vpc_id": "vpc-0423a2345e3d1e106"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871234562129:subnet/subnet-0f2f5c3b29ae57bff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0f2f5c3b29ae57bff",
            "map_public_ip_on_launch": false,
            "owner_id": "871234562129",
            "tags": {
              "Name": "Public Subnet - 2"
            },
            "vpc_id": "vpc-0423a2345e3d1e106"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871234562129:vpc/vpc-0423a2345e3d1e106",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f361f063c32e68b5",
            "default_route_table_id": "rtb-03600196fae134c54",
            "default_security_group_id": "sg-06219999c64414308",
            "dhcp_options_id": "dopt-eb139d91",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0423a2345e3d1e106",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03600196fae134c54",
            "owner_id": "871234562129",
            "tags": {
              "Name": "VPC"
            }
          }
        }
      ]
    }
  ]
}